Preloader on CSS

--- a/imports/ui/body.scss
+++ b/imports/ui/body.scss
@@ -6,6 +6,7 @@
 @import './video/video.scss';
 @import './contacts/contacts.scss';
 @import './footer/footer.scss';
+@import './preloader/preloader.scss';
 
 a {
   @include transition;
