--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -10,6 +10,16 @@ header {
     background-size: 100%;
     width: 230px;
     height: 300px;
+    &:after {
+        content: "post-hardcore, metalcore";
+        position: absolute;
+        margin: auto;
+        bottom: -35px;
+        left: 0;
+        right: 0;
+        text-transform: uppercase;
+        opacity: .4;
+    }
   }
   .arrow-down {
     @include absolute-center;
