Added images to background

--- a/imports/ui/songs/songs.scss
+++ b/imports/ui/songs/songs.scss
@@ -1,4 +1,9 @@
 .songs {
   text-align: center;
   padding-bottom: 50px;
+  background-color: rgba(255,255,255, 0.7);
+  
+  -webkit-box-shadow: inset 0px 0px 31px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 0px 0px 31px 0px rgba(0,0,0,0.75);
+  box-shadow: inset 0px 0px 31px 0px rgba(0,0,0,0.75);
 }
