--- a/imports/ui/body.scss
+++ b/imports/ui/body.scss
@@ -21,3 +21,12 @@ a {
   text-transform: uppercase;
   margin: 50px 0;
 }
+
+body {
+  background-size: 100%;
+  background-attachment: fixed;
+  @media only screen and (max-width: 768px) {
+    background-size: auto 100%;
+    background-position: center;
+  }
+}
