--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -3,6 +3,7 @@
 header {
   height: 100vh;
   text-align: center;
+  background-color: rgba(255,255,255, 0.4);
   .main-logo {
     @include absolute-center;
 
@@ -19,5 +20,14 @@ header {
     text-align: center;
     top: initial;
     bottom: 30px;
+
+    a {
+      padding: 0.1em 0.3em 0;
+      border-radius: 50%;
+      background-color: rgba(255,255,255, 0.5);
+      -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+      -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+    }
   }
 }
