--- a/imports/ui/social/social.scss
+++ b/imports/ui/social/social.scss
@@ -2,8 +2,12 @@
 
 .social-buttons {
   opacity: 0.8;
-  margin-top: 1.5em;
+  padding: 0.3em 0.1em 0.01em;
+  background-color: rgba(255,255,255,0.5);
   font-size: 1.8em;
+  -webkit-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
+  -moz-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
+  box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   ul {
     padding: 0;
     a:hover {
