--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -3,14 +3,14 @@
 header {
   height: 100vh;
   text-align: center;
-  background-color: rgba(255,255,255, 0.4);
+  background-color: rgba(255,255,255, 0.7);
   .main-logo {
     @include absolute-center;
-
+    top: -45px;
     background-image: url('/img/logo.png');
     background-size: 100%;
-    width: 230px;
-    height: 300px;
+    width: 370px;
+    height: 320px;
   }
   .arrow-down {
     @include absolute-center;
