--- a/imports/ui/social/social.scss
+++ b/imports/ui/social/social.scss
@@ -8,6 +8,7 @@
   -webkit-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   -moz-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
+  cursor: pointer;
   ul {
     padding: 0;
     a:hover {
