--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -4,6 +4,7 @@ header {
   height: 100vh;
   text-align: center;
   background-color: rgba(255,255,255, 0.7);
+  overflow: hidden;
   .main-logo {
     @include absolute-center;
     top: -45px;
@@ -14,7 +15,6 @@ header {
   }
   .arrow-down {
     @include absolute-center;
-
     width: 30px;
     height: 30px;
     text-align: center;
@@ -22,12 +22,34 @@ header {
     bottom: 30px;
 
     a {
-      padding: 0.1em 0.3em 0;
-      border-radius: 50%;
-      background-color: rgba(255,255,255, 0.5);
-      -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
-      -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+      color: white;
+    }
+    //   padding: 0.1em 0.3em 0;
+    //   border-radius: 50%;
+    //   background-color: rgba(255,255,255, 0.5);
+    //   -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+    //   -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+    //   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+    // }
+  }
+
+  .row,
+  .col-md-4,
+  .col-md-8 {
+    height: 100%;
+  }
+
+  .black {
+    background-color: #333333;
+    height: 100%;
+
+    .album {
+      margin-top: 55px;
+      display: inline-block;
+      background-image: url('/img/album.jpg');
+      background-size: 100%;
+      width: 370px;
+      height: 370px;
     }
   }
 }
