--- a/imports/ui/social/social.scss
+++ b/imports/ui/social/social.scss
@@ -1,17 +1,30 @@
 @import '../variables.scss';
 
 .social-buttons {
-  opacity: 0.8;
-  padding: 0.3em 0.1em 0.01em;
-  background-color: rgba(255,255,255,0.5);
-  font-size: 1.8em;
+  // opacity: 0.8;
+  // padding: 0 0.1em 0.01em;
+  background-color: #333;
+  z-index: 999999;
+  position: relative;
+  color: white;
+  font-size: 1.2em;
   -webkit-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   -moz-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.55);
   cursor: pointer;
   ul {
     padding: 0;
+    margin: 0;
+    a {
+      display: inline-block;
+      color: white;
+      text-decoration: none;
+      padding: 0.6em;
+      cursor: pointer;
+    }
     a:hover {
+      background: white;
+      color: #222222;
       &.vk {
         color: $vk;
       }
