--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -77,9 +77,10 @@ header {
   }
 
   &.apple {
-    background-image: url("https://images.apple.com/itunes/marketing-on-music/images/badge_artwork_2_option_large_2x.jpg");
-    width: 240px;
+    // background-image: url("https://images.apple.com/itunes/marketing-on-music/images/badge_artwork_2_option_large_2x.jpg");
+    width: 109px;
     background-position-y: 8px;
+    background-image: url('//tools.applemusic.com/assets/shared/badges/en-us/music-lrg.svg');
   }
 
   &.spotify {
@@ -87,4 +88,10 @@ header {
     width: 112px;
     background-position-y: 9px;
   }
+}
+
+.previousRelease.text-center {
+  margin-top: 50px;
+  background: #f3f3f3;
+  padding: 50px 0;
 }
