--- a/imports/ui/body.scss
+++ b/imports/ui/body.scss
@@ -23,6 +23,11 @@ a {
 }
 
 body {
+
+  background-image: url('/img/bg.jpg');
+  background-size: 100% auto;
+  background-position: 50% 50%;
+
   background-size: 100%;
   background-attachment: fixed;
   @media only screen and (max-width: 768px) {
