--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -5,6 +5,7 @@ header {
   text-align: center;
   background-color: rgba(255,255,255, 0.7);
   overflow: hidden;
+  min-height: 90vh;
 
   .vote {
     background: #8ab51d;
@@ -83,7 +84,7 @@ header {
   }
 
   small {
-    color: #b7b7b7;
+    color: #6f6f6f;
     font-size: 65%;
     margin-bottom: 50px;
   }
