--- a/imports/ui/contacts/contacts.scss
+++ b/imports/ui/contacts/contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   padding-bottom: 50px;
-  text-align: center;
+  text-align: right;
   background-color: rgba(255,255,255, 0.7);
 
   -webkit-box-shadow: inset 0px 0px 31px 0px rgba(0,0,0,0.75);
