--- a/imports/ui/header/header.scss
+++ b/imports/ui/header/header.scss
@@ -2,10 +2,19 @@
 
 header {
   // height: 100vh;
-  text-align: center;
-  background-color: rgba(255,255,255, 0.7);
+  background-color: rgba(255,255,255, 0.85);
   overflow: hidden;
-  min-height: 90vh;
+  min-height: 70vh;
+
+  .album-info {
+    font-size: 28px;
+    padding-top: 140px;
+
+    a {
+      font-weight: bold !important;
+      text-decoration: underline;
+    }
+  }
 
   .vote {
     background: #8ab51d;
@@ -119,4 +128,13 @@ header {
   margin-top: 50px;
   background: #f3f3f3;
   padding: 50px 0;
+}
+
+#singles {
+  background-color: #f5f5f5;
+  padding-bottom: 30px;
+
+  .title {
+    margin: 0 !important;
+  }
 }
