Divided by modules. Aded better GA tracking. Inspired preperation.

--- a/imports/ui/body.scss
+++ b/imports/ui/body.scss
@@ -7,6 +7,8 @@
 @import './contacts/contacts.scss';
 @import './footer/footer.scss';
 @import './preloader/preloader.scss';
+@import './singles/singles.scss';
+@import './inspired/inspired.scss';
 
 a {
   @include transition;
